# funLang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  funlang_lexer.txt  funlang_parser.txt  utils.cmake
include/AST/: AST.hpp  Decl.hpp  Stmt.hpp  Type.hpp
include/Basic/: Basic.hpp  CMakeLists.txt  Diag.hpp  IdentifierTable.hpp
include/Basic/defs/: BuiltInTypes.def  CMakeLists.txt  Diags.def  OperationKinds.def  TokenTags.def
include/Lex/: Lex.hpp
include/Parse/: Parse.hpp
include/Sema/: Sema.hpp
include/Type/: Type.hpp
src/: CMakeLists.txt  Lex.cpp  Parse.cpp
src/AST/: AST.cpp  AST.cppm  CMakeLists.txt  Codegen.cpp  Codegen.hpp  Decl.cpp  Decl.cppm  Expr.cpp  Expr.cppm  Stmt.cpp  Stmt.cppm  Type.cpp  Type.cppm
src/Basic/: Basic.cpp  Basic.cppm  Basic.hpp  Basic.ixx  BuiltInTypes.cpp  CMakeLists.txt  Casting.cppm  Concepts.cppm  Constants.cppm  Diag.cpp  Diag.cppm  Diag.hpp  Diag.ixx  Diags.def  IdentifierTable.cppm  IdentifierTable.ixx  OperationKinds.cpp  OperationKinds.def  OperationKinds.hpp  Result.cppm  Result.ixx  SymbolTable.cppm  TokenTags.cpp  TokenTags.def  TokenTags.hpp
src/Basic/defs/: Diags.def  OperationKinds.def  TokenTags.def
src/Basic/llvm/: CMakeLists.txt  llvm.cppm
src/Basic/std/: CMakeLists.txt  std_modules.cppm
src/Diagnostics/: CMakeLists.txt  Diag.cppm
src/Driver/: CMakeLists.txt  Driver.cpp
src/Lex/: CMakeLists.txt  Lex.Token.cppm  Lex.Token.ixx  Lex.cpp  Lex.cppm  Lex.hpp  Lex.ixx
src/Parse/: AST.cpp  AST.hpp  CMakeLists.txt  Parse.cpp  Parse.cppm  Parse.hpp  Parse.ixx  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  ParseTree.cpp  ParseTree.hpp
src/Sema/: CMakeLists.txt  Scope.cppm  Sema.Scope.cppm  Sema.cpp  Sema.cppm  Sema.hpp  Visitor.hpp
src/Type/: CMakeLists.txt  Type.cpp
src/includes/: AST.hpp  Codegen.hpp  Lex.hpp  Parse.hpp  llvmStructs.hpp
src/tests/Lex/: LexKeywordTest.cpp  LexNumLiteralsTest.cpp  LexStringTest.cpp  lex_test2.txt  lex_test3.txt
tests/: CMakeLists.txt
tests/AST/: CMakeLists.txt  astTests.cpp
tests/Lex/: CMakeLists.txt  LexExamplePrototypeTest.cpp  LexKeywordTest.cpp  LexSingleCharTokensTest.cpp  LexStringTest.cpp  LexTests.cpp  lex_Basic.txt  lex_ExampleFunc.txt  lex_IntNumLits.txt  lex_Keywords.txt  lex_RealNumLits.txt  lex_StringLits.txt  lex_test1.txt  lex_test3.txt  lex_test5.txt  lex_withErrors.txt
tests/Parse/: CMakeLists.txt  FnsParseTest2.txt  FnsParseTest3.txt  FnsParseTest4.fun  FnsParseTest5.fun  ParseFns.cpp  ParseTests.cpp  bigCompilationUnit.fun  cmpExpr.fun  compilationUnit.fun  fnTest1.fun  fnTest2.fun  structTest.fun
tests/Sema/: CMakeLists.txt  ScopeTests.cpp
