set(CMAKE_BUILD_TYPE Debug)
include(GoogleTest)
configure_file(./FnsParseTest.txt ${CMAKE_CURRENT_BINARY_DIR})
configure_file(./FnsParseTest2.txt ${CMAKE_CURRENT_BINARY_DIR})
configure_file(./FnsParseTest3.txt ${CMAKE_CURRENT_BINARY_DIR})
configure_file(./FnsParseTest4.fun ${CMAKE_CURRENT_BINARY_DIR})
configure_file(./FnsParseTest5.fun ${CMAKE_CURRENT_BINARY_DIR})
add_executable(ParseTests EXCLUDE_FROM_ALL ParseTests.cpp)

target_link_libraries(ParseTests PRIVATE Parse GTest::gtest_main)
add_test(ParseTests ParseTests)
